fix bug for extra space for reference lines

--- a/x-pack/plugins/lens/public/indexpattern_datasource/dimension_panel/dimension_editor.scss
+++ b/x-pack/plugins/lens/public/indexpattern_datasource/dimension_panel/dimension_editor.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.lnsIndexPatternDimensionEditor__section:empty {
+  display: none;
+}
+
 .lnsIndexPatternDimensionEditor__section--padded {
   padding: $euiSize;
 }
